--- a/betting-game-angular/package.json
+++ b/betting-game-angular/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "NODE_ENV=production ng build --prod",
     "test": "jest",
     "lint": "eslint --ext .ts src",
     "lint:fix": "eslint --ext .ts src --quiet --fix",
@@ -22,6 +23,7 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "ngx-build-plus": "^10.1.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -40,8 +42,12 @@
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.2.2",
     "jest-preset-angular": "^8.2.1",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-scss": "^2.1.1",
     "prettier": "^2.0.5",
     "prettier-eslint": "^11.0.0",
+    "tailwindcss": "^1.6.2",
     "ts-jest": "^26.1.4",
     "ts-node": "~8.3.0",
     "typescript": "~3.9.5"
