--- a/betting-game-angular/tsconfig.app.json
+++ b/betting-game-angular/tsconfig.app.json
@@ -2,8 +2,8 @@
 {
   "extends": "./tsconfig.base.json",
   "files": [
-    "main.ts",
-    "polyfills.ts"
+    "src/main.ts",
+    "src/polyfills.ts"
   ],
   "include": [
     "src/**/*.d.ts"
