--- a/betting-game-vue/package.json
+++ b/betting-game-vue/package.json
@@ -12,7 +12,7 @@
     "tailwindcss": "^1.6.2",
     "vue": "^3.0.0-0",
     "vue-router": "^3.4.1",
-    "vuex": "^3.5.1"
+    "vuex": "^4.0.0-beta.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
