--- a/betting-game-vue/package.json
+++ b/betting-game-vue/package.json
@@ -6,6 +6,7 @@
     "serve": "vue-cli-service serve --host localhost --port 3000",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
     "lint:fix": "vue-cli-service lint --fix"
   },
   "dependencies": {
@@ -13,6 +14,7 @@
     "tailwindcss": "^1.6.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-i18n": "^8.17.3",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.4.2",
     "vuex": "^3.5.1"
@@ -31,6 +33,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.2.2",
     "typescript": "~3.9.3",
+    "vue-cli-plugin-i18n": "~1.0.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
