--- a/betting-game-vue/tsconfig.json
+++ b/betting-game-vue/tsconfig.json
@@ -14,6 +14,8 @@
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
+      "webpack-env",
+      "webpack",
       "webpack-env"
     ],
     "paths": {
