--- a/betting-game-vue/package.json
+++ b/betting-game-vue/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "tailwindcss": "^1.6.2",
+    "tailwindcss": "^1.7.3",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-i18n": "^8.17.3",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.4.2",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "vuex-class-component": "^2.3.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
