--- a/betting-game-react/package.json
+++ b/betting-game-react/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^26.0.14",
     "@types/react-router-dom": "^5.1.5",
+    "jest-enzyme": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
