--- a/betting-game-angular/package.json
+++ b/betting-game-angular/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "build:prod": "NODE_ENV=production ng build --prod",
     "test": "jest",
+    "test:watch": "jest --watch",
     "lint": "eslint --ext .ts src",
     "lint:fix": "eslint --ext .ts src --quiet --fix",
     "format": "prettier --write \"**/*.{js,ts,css,scss,md,json,yml}\"",
@@ -15,41 +16,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.5",
-    "@angular/common": "~10.0.5",
-    "@angular/compiler": "~10.0.5",
-    "@angular/core": "~10.0.5",
-    "@angular/forms": "~10.0.5",
-    "@angular/platform-browser": "~10.0.5",
-    "@angular/platform-browser-dynamic": "~10.0.5",
-    "@angular/router": "~10.0.5",
+    "@angular/animations": "~10.1.5",
+    "@angular/common": "~10.1.5",
+    "@angular/compiler": "~10.1.5",
+    "@angular/core": "~10.1.5",
+    "@angular/forms": "~10.1.5",
+    "@angular/platform-browser": "~10.1.5",
+    "@angular/platform-browser-dynamic": "~10.1.5",
+    "@angular/router": "~10.1.5",
+    "@ngxs/store": "^3.7.0",
+    "@types/luxon": "^1.25.0",
+    "luxon": "^1.25.0",
     "ngx-build-plus": "^10.1.1",
-    "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
+    "rxjs": "~6.6.3",
+    "tslib": "^2.0.3",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.4",
-    "@angular/cli": "~10.0.4",
-    "@angular/compiler-cli": "~10.0.5",
-    "@types/jest": "^26.0.9",
-    "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "^3.8.0",
-    "@typescript-eslint/parser": "^3.8.0",
-    "eslint": "^7.6.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.22.0",
+    "@angular-devkit/build-angular": "~0.1001.6",
+    "@angular/cli": "~10.1.1",
+    "@angular/compiler-cli": "~10.1.5",
+    "@types/jest": "^26.0.14",
+    "@types/node": "^14.11.8",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.2.2",
-    "jest-preset-angular": "^8.2.1",
+    "jest": "^26.5.2",
+    "jest-preset-angular": "^8.3.1",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-scss": "^2.1.1",
-    "prettier": "^2.0.5",
+    "prettier": "^2.1.2",
     "prettier-eslint": "^11.0.0",
-    "tailwindcss": "^1.6.2",
-    "ts-jest": "^26.1.4",
-    "ts-node": "~8.3.0",
-    "typescript": "~3.9.5"
+    "tailwindcss": "^1.8.13",
+    "ts-jest": "^26.4.1",
+    "ts-node": "~9.0.0",
+    "typescript": "~4.0.3"
   }
 }
