--- a/betting-game-angular/tsconfig.app.json
+++ b/betting-game-angular/tsconfig.app.json
@@ -1,15 +1,9 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "extends": "./tsconfig.base.json",
-  "files": [
-    "src/main.ts",
-    "src/polyfills.ts"
-  ],
-  "include": [
-    "src/**/*.d.ts"
-  ],
+  "files": ["src/main.ts", "src/polyfills.ts"],
+  "include": ["src/**/*.d.ts"],
   "angularCompilerOptions": {
     "enableIvy": true
   }
 }
-
