--- a/betting-game-angular/package.json
+++ b/betting-game-angular/package.json
@@ -36,6 +36,7 @@
     "@angular-devkit/build-angular": "~0.1001.6",
     "@angular/cli": "~10.1.1",
     "@angular/compiler-cli": "~10.1.5",
+    "@ngxs/devtools-plugin": "^3.7.0",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.8",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
