when running locally change port to 3000 (#11)

--- a/betting-game-angular/angular.json
+++ b/betting-game-angular/angular.json
@@ -63,7 +63,8 @@
           "builder": "ngx-build-plus:dev-server",
           "options": {
             "extraWebpackConfig": "webpack.config.js",
-            "browserTarget": "betting-game-angular:build"
+            "browserTarget": "betting-game-angular:build",
+            "port": 3000
           },
           "configurations": {
             "production": {
