--- a/betting-game-react/package.json
+++ b/betting-game-react/package.json
@@ -6,13 +6,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^26.0.14",
-    "@types/react-router-dom": "^5.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "typescript": "^4.0.2"
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "npm run watch:css && react-scripts start",
@@ -38,8 +34,17 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^26.0.15",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
     "autoprefixer": "^9.8.6",
+    "eslint-config-prettier": "^6.14.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "postcss-cli": "^7.1.1",
-    "tailwindcss": "^1.6.2"
+    "prettier": "^2.1.2",
+    "react-scripts": "3.4.1",
+    "tailwindcss": "^1.6.2",
+    "typescript": "^4.0.2"
   }
 }
