--- a/betting-game-react/package.json
+++ b/betting-game-react/package.json
@@ -1,50 +1,55 @@
 {
-  "name": "betting-game-react",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.0.4",
-    "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
-  },
-  "scripts": {
-    "start": "npm run watch:css && react-scripts start",
-    "build": "npm run build:css && react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
-    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/jest": "^26.0.15",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-router-dom": "^5.1.5",
-    "autoprefixer": "^9.8.6",
-    "eslint-config-prettier": "^6.14.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "postcss-cli": "^7.1.1",
-    "prettier": "^2.1.2",
-    "react-scripts": "3.4.1",
-    "tailwindcss": "^1.6.2",
-    "typescript": "^4.0.2"
-  }
+    "name": "betting-game-react",
+    "version": "0.1.0",
+    "private": true,
+    "homepage": "/",
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.0.4",
+        "@testing-library/user-event": "^7.1.2",
+        "jwt-decode": "^3.0.0",
+        "oidc-client": "^1.10.1",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "react-error-boundary": "^3.0.2",
+        "react-router-dom": "^5.2.0"
+    },
+    "scripts": {
+        "start": "npm run watch:css && react-scripts start",
+        "build": "npm run build:css && react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
+        "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@types/jest": "^26.0.15",
+        "@types/jwt-decode": "^2.2.1",
+        "@types/react": "^16.9.53",
+        "@types/react-dom": "^16.9.8",
+        "@types/react-router-dom": "^5.1.5",
+        "autoprefixer": "^9.8.6",
+        "eslint-config-prettier": "^6.14.0",
+        "eslint-plugin-prettier": "^3.1.4",
+        "postcss-cli": "^7.1.1",
+        "prettier": "^2.1.2",
+        "react-scripts": "3.4.1",
+        "tailwindcss": "^1.6.2",
+        "typescript": "^4.0.2"
+    }
 }
