--- a/betting-game-react/package.json
+++ b/betting-game-react/package.json
@@ -28,7 +28,7 @@
     "scripts": {
         "start": "npm run watch:css && react-scripts start",
         "build": "npm run build:css && react-scripts build",
-        "test": "react-scripts test",
+        "test": "react-scripts test --silent --watchAll=false",
         "eject": "react-scripts eject",
         "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
         "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
