--- a/betting-game-vue/package.json
+++ b/betting-game-vue/package.json
@@ -11,11 +11,12 @@
     "lint:fix": "vue-cli-service lint --fix"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "autoprefixer": "^9.8.6",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "postcss": "^7.0.35",
-    "tailwindcss": "^2.0.1-compat",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-i18n": "^8.17.3",
@@ -40,6 +41,8 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.0",
     "typescript": "~3.9.3",
     "vue-cli-plugin-i18n": "~1.0.1",
     "vue-template-compiler": "^2.6.11"
