BBG-70: Add Snapshot Tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,4 +55,4 @@ jobs:
 
       - name: Run React tests
         working-directory: ./betting-game-react
-        run: yarn test
+        run: yarn test-ci
