--- a/betting-game-react/package.json
+++ b/betting-game-react/package.json
@@ -1,34 +1,40 @@
 {
-"name": "betting-game-react",
-"version": "0.1.0",
-"private": true,
-"homepage": "/",
+    "name": "betting-game-react",
+    "version": "0.1.0",
+    "private": true,
+    "homepage": "/",
     "dependencies": {
         "@testing-library/jest-dom": "^5.11.4",
-        "@testing-library/react": "^11.0.4",
+        "@testing-library/react": "^11.2.5",
         "@testing-library/user-event": "^7.1.2",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
+        "react": "^16.14.0",
+        "react-dom": "^16.14.0",
         "react-router-dom": "^5.2.0"
     },
     "devDependencies": {
+        "@types/enzyme": "^3.10.8",
+        "@types/enzyme-adapter-react-16": "^1.0.6",
         "@types/jest": "^26.0.20",
-        "@types/react": "^17.0.0",
+        "@types/react": "^17.0.1",
         "@types/react-dom": "^17.0.0",
         "@types/react-router-dom": "^5.1.7",
         "autoprefixer": "^9.8.6",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.6",
         "eslint-config-prettier": "^7.2.0",
         "eslint-plugin-prettier": "^3.3.1",
-        "postcss-cli": "^7.1.1",
+        "jest-enzyme": "^7.1.2",
+        "postcss-cli": "^7.1.2",
         "prettier": "^2.2.1",
-        "react-scripts": "^3.4.1",
-        "tailwindcss": "^1.6.2",
+        "react-scripts": "^3.4.4",
+        "tailwindcss": "^1.9.6",
         "typescript": "^4.1.3"
     },
     "scripts": {
         "start": "npm run watch:css && react-scripts start",
         "build": "npm run build:css && react-scripts build",
-        "test": "react-scripts test --silent --watchAll=false",
+        "test": "react-scripts test --silent",
+        "test-ci": "react-scripts test --silent --watchAll=false",
         "eject": "react-scripts eject",
         "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
         "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
