--- a/betting-game-angular/package.json
+++ b/betting-game-angular/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
     "@angular/router": "~10.1.5",
+    "@auth0/auth0-angular": "^1.2.0",
     "@ngxs/store": "^3.7.0",
     "@types/luxon": "^1.25.0",
     "luxon": "^1.25.0",
