BBG-59: Add tests and components and fix bugs

--- a/betting-game-react/package.json
+++ b/betting-game-react/package.json
@@ -3,35 +3,6 @@
     "version": "0.1.0",
     "private": true,
     "homepage": "/",
-    "dependencies": {
-        "@testing-library/jest-dom": "^5.11.4",
-        "@testing-library/react": "^11.2.5",
-        "@testing-library/user-event": "^7.1.2",
-        "react": "^16.14.0",
-        "react-dom": "^16.14.0",
-        "jwt-decode": "^3.0.0",
-        "oidc-client": "^1.10.1",
-        "react-router-dom": "^5.2.0"
-    },
-    "devDependencies": {
-        "@types/enzyme": "^3.10.8",
-        "@types/enzyme-adapter-react-16": "^1.0.6",
-        "@types/jest": "^26.0.20",
-        "@types/react": "^17.0.1",
-        "@types/react-dom": "^17.0.0",
-        "@types/react-router-dom": "^5.1.7",
-        "autoprefixer": "^9.8.6",
-        "enzyme": "^3.11.0",
-        "enzyme-adapter-react-16": "^1.15.6",
-        "eslint-config-prettier": "^7.2.0",
-        "eslint-plugin-prettier": "^3.3.1",
-        "jest-enzyme": "^7.1.2",
-        "postcss-cli": "^7.1.2",
-        "prettier": "^2.2.1",
-        "react-scripts": "^3.4.4",
-        "tailwindcss": "^1.9.6",
-        "typescript": "^4.1.3"
-    },
     "scripts": {
         "start": "npm run watch:css && react-scripts start",
         "build": "npm run build:css && react-scripts build",
@@ -41,15 +12,6 @@
         "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
         "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
         "lint": "eslint src/**/*.ts src/**/*.tsx"
-    },
-    "eslintConfig": {
-        "extends": "react-app",
-        "plugins": [
-            "prettier"
-        ],
-        "rules": {
-            "prettier/prettier": "warn"
-        }
     },
     "browserslist": {
         "production": [
@@ -62,5 +24,43 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "eslintConfig": {
+        "plugins": [
+            "prettier"
+        ],
+        "extends": "react-app",
+        "rules": {
+            "prettier/prettier": "warn"
+        }
+    },
+    "dependencies": {
+        "jwt-decode": "^3.0.0",
+        "oidc-client": "^1.10.1",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "react-error-boundary": "^3.0.2",
+        "react-router-dom": "^5.2.0"
+    },
+    "devDependencies": {
+        "@types/enzyme": "^3.10.8",
+        "@types/enzyme-adapter-react-16": "^1.0.6",
+        "@types/jest": "^26.0.15",
+        "@types/jwt-decode": "^2.2.1",
+        "@types/react": "^16.9.53",
+        "@types/react-dom": "^16.9.8",
+        "@types/react-router-dom": "^5.1.5",
+        "autoprefixer": "^9.8.6",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.6",
+        "eslint-config-prettier": "^6.14.0",
+        "eslint-plugin-prettier": "^3.1.4",
+        "jest-enzyme": "^7.1.2",
+        "node-sass": "^4.14.1",
+        "postcss-cli": "^7.1.1",
+        "prettier": "^2.1.2",
+        "react-scripts": "3.4.1",
+        "tailwindcss": "^1.6.2",
+        "typescript": "^4.0.2"
     }
 }
