--- a/betting-game-vue/package.json
+++ b/betting-game-vue/package.json
@@ -12,10 +12,10 @@
   },
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.1.2",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^9",
     "axios": "^0.21.1",
     "core-js": "^3.13.0",
-    "postcss": "^8.2.10",
+    "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
@@ -45,6 +45,7 @@
     "sass-loader": "^10.2.0",
     "typescript": "^3.9.9",
     "vue-cli-plugin-i18n": "~1.0.1",
+    "vue-cli-plugin-tailwind": "~2.0.6",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
